--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <section class="personal">
             <div class="block">
                 <ul>
-                    <li>fabiochiquezi2@gmail.com</li>
-                    <li>+55 019 983-127-035</li>
+                    <li>
+                        <b>E-mail:</b>
+                        <span>fabiochiquezi@gmail.com</span>
+                    </li>
+                    <li>
+                        <b>Cell:</b>
+                        <span>+55 019 983-127-035</span>
+                    </li>
                     <li>
                         <b>Age:</b>
                         <span>29</span>
@@ -31,7 +37,7 @@
                     </li>
                     <li>
                         <b>Street:</b>
-                        <span>R. Vinte e Cinco de Março, nº 26</span>
+                        <span>R. Vinte e Cinco de Março</span>
                     </li>
                     <li>
                         <b>City:</b>
@@ -59,11 +65,11 @@
                     </li>
                     <li>
                         <b>Resume:</b>
-                        <span>resume.chiquezi.com</span>
+                        <span>fabiochiquezi.github.io</span>
                     </li>
                     <li>
                         <b>LinkedIn:</b>
-                        <span>/fabiochiquezi</span>
+                        <span>/in/fábio-chiquezi-b40607217</span>
                     </li>
                     <li>
                         <b>GitHub:</b>
@@ -74,9 +80,9 @@
                     <b>Front-end Developer:</b>
                     <div class="wrap">
                         <div>
-                            <li>- Javascript</li>
+                            <li>- JavaScript</li>
                             <li>- Typescript</li>
-                            <li>- React</li>
+                            <li>- ReactJS / NextJS</li>
                         </div>
                         <div>
                             <li>- HTML</li>
@@ -92,7 +98,7 @@
             <h2>Projects</h2>
             <ul>
                 <li>
-                    <p>github - /fabiochiquezi/startlist-opensource</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-Portfolio-Web</p>
                     <p>
                         <b>Name:</b>
                         <span>My Portfolio</span>
@@ -107,14 +113,14 @@
                     </p>
                 </li>
                 <li>
-                    <p>github - /fabiochiquezi/startlist-opensource</p>
+                    <p class="github">github.com/fabiochiquezi/fabiochiquezi.github.io</p>
                     <p>
                         <b>Name:</b>
                         <span>My Resume Online</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>resume.chiquezi.com</span>
+                        <span>fabiochiquezi.github.io</span>
                     </p>
                     <p>
                         <b>Description:</b>
@@ -122,14 +128,14 @@
                     </p>
                 </li>
                 <li>
-                    <p>github - /fabiochiquezi/startlist-opensource</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-ProjectStarList-Web</p>
                     <p>
                         <b>Name:</b>
                         <span>Star List</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>chiquezi.starlist.com</span>
+                        <span>starlist.chiquezi.com</span>
                     </p>
                     <p>
                         <b>Description:</b>
@@ -137,29 +143,29 @@
                     </p>
                 </li>
                 <li>
-                    <p>github - /fabiochiquezi/startlist-opensource</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-Dashboard-Web</p>
                     <p>
                         <b>Name:</b>
                         <span>My Default Dashboard</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>chiquezi.mydashboard.com</span>
+                        <span>dashboard.chiquezi.com/signin</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>Open-source web project</span>
+                        <span>Open-source web project (currenting in development)</span>
                     </p>
                 </li>
                 <li>
-                    <p>github - /fabiochiquezi/startlist-opensource</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-ProjectKPN-Web</p>
                     <p>
                         <b>Name:</b>
                         <span>KPN Project</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>chiquezi.kpnproject.com</span>
+                        <span>kpn.chiquezi.com</span>
                     </p>
                     <p>
                         <b>Description:</b>
@@ -187,20 +193,6 @@
                 <li>
                     <p>
                         <b>Name:</b>
-                        <span>INEQ</span>
-                    </p>
-                    <p>
-                        <b>Link:</b>
-                        <span>ineq.com.br</span>
-                    </p>
-                    <p>
-                        <b>Description:</b>
-                        <span>freelance project to the company YouAndUs (youandus.com.br)</span>
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <b>Name:</b>
                         <span>FAEP</span>
                     </p>
                     <p>
@@ -209,7 +201,21 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>freelance project to the company YouAndUs (youandus.com.br)</span>
+                        <span>Brazilian college / website (freelance)</span>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <b>Name:</b>
+                        <span>INEQ</span>
+                    </p>
+                    <p>
+                        <b>Link:</b>
+                        <span>ineq.com.br</span>
+                    </p>
+                    <p>
+                        <b>Description:</b>
+                        <span>Brazilian college / website (freelance)</span>
                     </p>
                 </li>
                 <li>
@@ -223,21 +229,21 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>freelance project straight foward to the client.</span>
+                        <span>publicity agency / website (freelance)</span>
                     </p>
                 </li>
                 <li>
                     <p>
                         <b>Name:</b>
-                        <span>SMCC Security</span>
+                        <span>ESP System Security</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>istoepromo.com.br</span>
+                        <span>espsystemsecurity.com.br</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>freelance project straight foward to the client.</span>
+                        <span>security company / website (freelance)</span>
                     </p>
                 </li>
                 <li>
@@ -251,7 +257,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>freelance project straight foward to the client.</span>
+                        <span>insurance company / website (freelance)</span>
                     </p>
                 </li>
                 <li>
@@ -265,7 +271,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>A freelance intranet system.</span>
+                        <span>Hindu medicine company / intranet system (freelance)</span>
                     </p>
                 </li>
             </ul>
@@ -274,7 +280,7 @@
         <section class="education">
             <h2>Education</h2>
             <p>
-                Honestly, most of my studies has been by my own through YouTube and my personal projects. Although I’ve got a lot of help from companies that accept me as 
+                Honestly, most of my studies have been on my own through the internet and my personal projects. However, I have received a lot of help from companies that accept me as a member of their team.
             </p>
             <div class="education-wrap">
                 <div class="companies">
@@ -285,7 +291,7 @@
                             <span>(2017-2021)</span>
                         </h4>
                         <p>
-                            I’ve worked as a freelancer for a long time, I was building mostly systems, websites, themes wordpress, and giving manutantion.
+                            I worked as a freelancer for a long time, I was mainly building systems, websites, wordpress themes...
                         </p>
                     </div>
                     <div class="box">
@@ -294,7 +300,7 @@
                             <span>(2014-2016)</span>
                         </h4>
                         <p>
-                            An Agency of publicity that I made a partnership as working as their personal freelancer
+                            An advertising agency I partnered with working as a personal freelancer 
                         </p>
                     </div>
                     <div class="box">
@@ -303,13 +309,13 @@
                             <span>(2012-2014)</span>
                         </h4>
                         <p>
-                            First company that I worked with development. It was an important place for me since they were the first to give me an oportunity.
+                            First company I worked with development. It was an important place for me as they were the first to give me a chance.
                         </p>
                     </div>
                 </div>
                 <div class="schools">
                     <h3>Schools</h3>
-                    <div class="box">
+                    <!-- <div class="box">
                         <p>
                             <b>School:</b>
                             FreeCodeCamp (Development)
@@ -322,19 +328,33 @@
                             <b>Description:</b>
                             Most of my studies has been through their content, and I’m really grateful for all their work.
                         </p>
-                    </div>
+                    </div> -->
                     <div class="box">
                         <p>
                             <b>School:</b>
-                            Alura (development)
+                            Alura (development school)
                         </p>
                         <p>
-                            <b>Link:</b>
+                            <b>Certificates:</b>
                             cursos.alura.com.br/user/fabiochiquezi
                         </p>
                         <p>
                             <b>Description:</b>
-                            My first school of Front-End Development in my country
+                            One of the biggest development schools in my country
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            <b>School:</b>
+                            Udemy
+                        </p>
+                        <p>
+                            <b>Link:</b>
+                            udemy.com/user/fabio-chiquezi-pereira/
+                        </p>
+                        <p>
+                            <b>Description:</b>
+                            I took some single courses on the Udemy platform
                         </p>
                     </div>
                     <div class="box">
@@ -344,7 +364,7 @@
                         </p>
                         <p>
                             <b>Address:</b>
-                            Address: Jardim Garcia, Campinas - SP
+                            Jardim Garcia, Campinas - SP
                         </p>
                     </div>
                 </div>
