fix content mistake

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>my first big project w/ a team and one of most important im my career.</span>
+                        <span>My first big project w/ a team and one of most important im my career.</span>
                     </p>
                 </li>
                 <li>
@@ -229,7 +229,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>publicity agency / website (freelance)</span>
+                        <span>Publicity agency / website (freelance)</span>
                     </p>
                 </li>
                 <li>
@@ -243,7 +243,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>security company / website (freelance)</span>
+                        <span>Security company / website (freelance)</span>
                     </p>
                 </li>
                 <li>
@@ -257,7 +257,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>insurance company / website (freelance)</span>
+                        <span>Insurance company / website (freelance)</span>
                     </p>
                 </li>
                 <li>
