--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://img.icons8.com/pastel-glyph/64/000000/code--v2.png" type="image/png">
 </head>
+
 <body>
     <div class="container">
         <h1>Fábio Chiquezi Pereira</h1>
@@ -28,11 +30,11 @@
                         <span>29</span>
                     </li>
                     <li>
-                        <b>Marital Status:</b> 
+                        <b>Marital Status:</b>
                         <span>Married</span>
                     </li>
                     <li>
-                        <b>ZIP Code:</b> 
+                        <b>ZIP Code:</b>
                         <span>13061-075</span>
                     </li>
                     <li>
@@ -69,7 +71,7 @@
                     </li>
                     <li>
                         <b>LinkedIn:</b>
-                        <span>/in/fábio-chiquezi-b40607217</span>
+                        <span>/in/fabiochiquezi</span>
                     </li>
                     <li>
                         <b>GitHub:</b>
@@ -280,7 +282,8 @@
         <section class="education">
             <h2>Education</h2>
             <p>
-                Honestly, most of my studies have been on my own through the internet and my personal projects. However, I have received a lot of help from companies that accept me as a member of their team.
+                Honestly, most of my studies have been on my own through the internet and my personal projects. However,
+                I have received a lot of help from companies that accept me as a member of their team.
             </p>
             <div class="education-wrap">
                 <div class="companies">
@@ -291,7 +294,8 @@
                             <span>(2017-2021)</span>
                         </h4>
                         <p>
-                            I worked as a freelancer for a long time, I was mainly building systems, websites, wordpress themes...
+                            I worked as a freelancer for a long time, I was mainly building systems, websites, wordpress
+                            themes...
                         </p>
                     </div>
                     <div class="box">
@@ -300,7 +304,7 @@
                             <span>(2014-2016)</span>
                         </h4>
                         <p>
-                            An advertising agency I partnered with working as a personal freelancer 
+                            An advertising agency I partnered with working as a personal freelancer
                         </p>
                     </div>
                     <div class="box">
@@ -309,7 +313,8 @@
                             <span>(2012-2014)</span>
                         </h4>
                         <p>
-                            First company I worked with development. It was an important place for me as they were the first to give me a chance.
+                            First company I worked with development. It was an important place for me as they were the
+                            first to give me a chance.
                         </p>
                     </div>
                 </div>
@@ -372,4 +377,5 @@
         </section>
     </div>
 </body>
+
 </html>
