--- a/index.html
+++ b/index.html
@@ -100,18 +100,17 @@
             <h2>Projects</h2>
             <ul>
                 <li>
-                    <p class="github">github.com/fabiochiquezi/Chz-Portfolio-Web</p>
                     <p>
                         <b>Name:</b>
-                        <span>My Portfolio</span>
+                        <span>Vexx</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>chiquezi.com</span>
+                        <span>vexx.chiquezi.com/home</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>My web portfolio / open-source project</span>
+                        <span>my web software that I've been developing so far</span>
                     </p>
                 </li>
                 <li>
@@ -130,33 +129,33 @@
                     </p>
                 </li>
                 <li>
-                    <p class="github">github.com/fabiochiquezi/Chz-ProjectStarList-Web</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-Component-PopSave</p>
                     <p>
                         <b>Name:</b>
-                        <span>Star List</span>
+                        <span>PopSave Component</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>starlist.chiquezi.com</span>
+                        <span>npmjs.com/@fabiochiquezi/pop-save</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>Open-source web software (currenting in development)</span>
+                        <span>JS Vanilla Component</span>
                     </p>
                 </li>
                 <li>
-                    <p class="github">github.com/fabiochiquezi/Chz-Dashboard-Web</p>
+                    <p class="github">github.com/fabiochiquezi/Chz-Component-Alert</p>
                     <p>
                         <b>Name:</b>
-                        <span>My Default Dashboard</span>
+                        <span>Alert Component</span>
                     </p>
                     <p>
                         <b>Link:</b>
-                        <span>dashboard.chiquezi.com/signin</span>
+                        <span>npmjs.com/@fabiochiquezi/alert</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>Open-source web project (currenting in development)</span>
+                        <span>JS Vanilla Component</span>
                     </p>
                 </li>
                 <li>
@@ -263,17 +262,18 @@
                     </p>
                 </li>
                 <li>
+                    <p class="github">github.com/fabiochiquezi/Chz-library-functionalTS</p>
                     <p>
                         <b>Name:</b>
-                        <span>Ayurclinic</span>
+                        <span>Functional Programming Library</span>
                     </p>
                     <p>
-                        <b>Link:</b>
-                        <span>ayurclinic.com.br</span>
+                        <!-- <b>Link:</b> -->
+                        <span>npmjs.com/@fabiochiquezi/functional-ts</span>
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>Hindu medicine company / intranet system (freelance)</span>
+                        <span>a newly started library for FP</span>
                     </p>
                 </li>
             </ul>
