fix: missed firebase

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                             <li>- CSS</li>
                             <li>- Figma</li>
                         </div>
+                        <div>
+                            <li>- Firebase</li>
+                        </div>
                     </div>
                 </ul>
             </div>
