--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <b>ZIP Code:</b>
                         <span>13061-075</span>
                     </li>
-                    <li>
+                    <!-- <li>
                         <b>Street:</b>
                         <span>R. Vinte e Cinco de Março</span>
-                    </li>
+                    </li> -->
                     <li>
                         <b>City:</b>
                         <span>Campinas</span>
@@ -53,18 +53,18 @@
                         <b>Country:</b>
                         <span>Brazil</span>
                     </li>
-                </ul>
-            </div>
-            <div class="block">
-                <ul>
                     <li>
                         <b>Language:</b>
                         <span>English / Portuguese (native)</span>
                     </li>
-                    <li>
-                        <b>Portfolio:</b>
-                        <span>chiquezi.com</span>
-                    </li>
+                </ul>
+            </div>
+            <div class="block">
+                <ul>
+                    <!-- <li>
+                        <b>Language:</b>
+                        <span>English / Portuguese (native)</span>
+                    </li> -->
                     <li>
                         <b>Resume:</b>
                         <span>fabiochiquezi.github.io</span>
@@ -75,7 +75,11 @@
                     </li>
                     <li>
                         <b>GitHub:</b>
-                        <span> /fabiochiquezi</span>
+                        <span>/fabiochiquezi</span>
+                    </li>
+                    <li>
+                        <b>NPM:</b>
+                        <span>/~fabiochiquezi</span>
                     </li>
                 </ul>
                 <ul class="front-skils">
