--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </p>
                     <p>
                         <b>Description:</b>
-                        <span>my web software that I've been developing so far</span>
+                        <span>my web software that I've been developing</span>
                     </p>
                 </li>
                 <li>
