update website info

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                         <span>fabiochiquezi.github.io</span>
                     </li>
                     <li>
+                        <b>Site:</b>
+                        <span>www.chiquezi.com</span>
+                    </li>
+                    <li>
                         <b>LinkedIn:</b>
                         <span>/in/fabiochiquezi</span>
                     </li>
@@ -106,6 +110,20 @@
         <section class="projects">
             <h2>Projects</h2>
             <ul>
+                <li>
+                    <p>
+                        <b>Name:</b>
+                        <span>Portfolio</span>
+                    </p>
+                    <p>
+                        <b>Link:</b>
+                        <span>www.chiquezi.com</span>
+                    </p>
+                    <p>
+                        <b>Description:</b>
+                        <span>my online portfolio with my open source project documentation</span>
+                    </p>
+                </li>
                 <li>
                     <p>
                         <b>Name:</b>
@@ -266,21 +284,6 @@
                     <p>
                         <b>Description:</b>
                         <span>Insurance company / website (freelance)</span>
-                    </p>
-                </li>
-                <li>
-                    <p class="github">github.com/fabiochiquezi/Chz-library-functionalTS</p>
-                    <p>
-                        <b>Name:</b>
-                        <span>Functional Programming Library</span>
-                    </p>
-                    <p>
-                        <!-- <b>Link:</b> -->
-                        <span>npmjs.com/@fabiochiquezi/functional-ts</span>
-                    </p>
-                    <p>
-                        <b>Description:</b>
-                        <span>a newly started library for FP</span>
                     </p>
                 </li>
             </ul>
